# faust-rs

./: .gitignore  Cargo.toml  README.md  cargo_asm.bat  cargo_asm_output.asm  justfile
benches/: copy.rs  freeverb.rs  interleave.rs  karplus.rs  karplus32.rs  noise.rs  pitchshifter.dsp  pitchshifter.rs  rms.dsp  rms.rs  test.rs
faust/: Cargo.toml
faust-traits/: Cargo.toml
faust-traits/src/: lib.rs
faust/src/: lib.rs
src/: lib.rs  main.rs
