[workspace]
members = ["faust", "faust-traits"]

[package]
name = "faust-test-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
anyhow = "1"
faust-traits = { version = "0.1", path = "faust-traits" }

[dev-dependencies]
default-boxed = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }
#criterion-polyglot = { version = "0.1", path = "C:/Code/Rust/criterion-polyglot" }

[features]
default = ["default-boxed"]
default-boxed = []
reprc = []

[profile.release]
opt-level = 3
# No lto for cargo asm
lto = false
codegen-units = 1

[lib]
bench = false

[[bench]]
name = "copy"
harness = false

[[bench]]
name = "freeverb"
harness = false

[[bench]]
name = "interleave"
harness = false

[[bench]]
name = "karplus32"
harness = false

[[bench]]
name = "noise"
harness = false

[[bench]]
name = "pitchshifter"
harness = false

[[bench]]
name = "rms"
harness = false
